--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
 layout: default
+lang: en
 ---
 
 <style type="text/css" media="screen">
@@ -21,5 +22,6 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>This page has been moved or no longer exists.</p>
+  <p>Please email us at info@theeta.nl to let us know of this error and we’ll fix it for you!</p>
 </div>
