--- a/el/about.html
+++ b/el/about.html
@@ -1,9 +1,7 @@
 ---
-layout: measure
+layout: about
 title: Η εταιρεία μας
 description: 
 lang: el
 ref: about
 ---
-
-{{ site.data.about[page.lang] }}
