--- a/el/beckher.html
+++ b/el/beckher.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Beckher
-description: 
+description: Η Beckher είναι μια μάρκα μικρών οικιακών συσκευών που κατασκευάζεται από την Theeta BV, έναν ολλανδικό παραγωγό, εισαγωγέα και διανομέα. Τα προϊόντα Beckher είναι διαθέσιμα για αγορά μεταξύ άλλων στα καταστήματα Market In.
 meta-image: /assets/theeta-beckher-meta-6x4.jpg
 lang: el
 ref: beckher
