--- a/el/miravento.html
+++ b/el/miravento.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Miravento
-description: 
+description: Η Theeta, σε στενή συνεργασία με το οινοποιείο Vallebelbo, προμηθεύει την αγορά με την υψηλής ποιότητας ιταλική σειρά κρασιών Miravento.
 meta-image: /assets/theeta-miravento-meta.jpg
 lang: el
 ref: miravento
