--- a/el/sanosil.html
+++ b/el/sanosil.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Sanosil
-description: 
+description: Η Theeta εξασφαλίζει λύσεις χημικής απολύμανσης υψηλής τεχνολογίας στην Ελλάδα και την Κύπρο, συνεργαζόμενη με την κορυφαία παγκοσμίως και καινοτόμα στον τομέα της, SANOSIL AG.
 meta-image: /assets/theeta-sanosil-meta.jpg
 lang: el
 ref: sanosil
