--- a/en/beckher.html
+++ b/en/beckher.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Beckher
-description: 
+description: Beckher is a brand of small household appliances manufactured by Theeta BV, a Dutch producer, importer and distributor. Beckher products are available for purchase in European retail outlets.
 meta-image: /assets/theeta-beckher-meta-6x4.jpg
 lang: en
 ref: beckher
