--- a/en/miravento.html
+++ b/en/miravento.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Miravento
-description: 
+description: Theeta, in close cooperation with the Vallebelbo winery, supplies the market with the high quality Italian wine range, Miravento.
 meta-image: /assets/theeta-miravento-meta.jpg
 lang: en
 ref: miravento
