--- a/en/sanosil.html
+++ b/en/sanosil.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Sanosil
-description: 
+description: Theeta provides high-tech chemical disinfection solutions in Greece and Cyprus, in cooperation with SANOSIL AG, a global leader and innovator in its field.
 meta-image: /assets/theeta-sanosil-meta.jpg
 lang: en
 ref: sanosil
