--- a/nl/about.html
+++ b/nl/about.html
@@ -1,7 +1,7 @@
 ---
 layout: about
 title: Over ons
-description: 
+description: Productie-, import- en exportbedrijf in Nederland, EU. Producent van Beckher apparaten. Distributeur van Miravento wijn. Exclusief distributeur van Sanosil ontsmettingsmiddelen in Griekenland en Cyprus.
 lang: nl
 ref: about
 ---
