--- a/nl/beckher.html
+++ b/nl/beckher.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Beckher
-description: 
+description: Beckher is een merk van kleine huishoudelijke apparaten dat wordt vervaardigd door Theeta BV, een Nederlandse producent, importeur en distributeur. Beckher producten zijn te koop via Bol.com
 meta-image: /assets/theeta-beckher-meta-6x4.jpg
 lang: nl
 ref: beckher
