--- a/nl/sanosil.html
+++ b/nl/sanosil.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Sanosil
-description: 
+description: Theeta levert hoogtechnologische chemische ontsmettingsoplossingen in Griekenland en Cyprus, in samenwerking met 's werelds grootste innovator op dit gebied, SANOSIL AG.
 meta-image: /assets/theeta-sanosil-meta.jpg
 lang: nl
 ref: sanosil
