--- a/el/about.html
+++ b/el/about.html
@@ -1,7 +1,7 @@
 ---
 layout: about
 title: Η εταιρεία μας
-description: 
+description: Εταιρεία παραγωγής, εισαγωγών και εξαγωγών στην Ολλανδία, ΕΕ. Παραγωγός συσκευών Beckher. Διανομέας του κρασιού Miravento. Αποκλειστικός διανομέας των απολυμαντικών Sanosil στην Ελλάδα και την Κύπρο.
 lang: el
 ref: about
 ---
