--- a/nl/miravento.html
+++ b/nl/miravento.html
@@ -1,7 +1,7 @@
 ---
 layout: brand
 title: Miravento
-description: 
+description: Theeta levert, in nauwe samenwerking met het wijnhuis Vallebelbo, het hoogwaardige Italiaanse wijnassortiment Miravento aan de markt.
 meta-image: /assets/theeta-miravento-meta.jpg
 lang: nl
 ref: miravento
